27466 Fix Edge issues [Update LineDot Chart to support high contrast mode] (#27)

--- a/style/lineDotChart.less
+++ b/style/lineDotChart.less
@@ -81,20 +81,3 @@
 .lineDotChart__playBtn path {
   fill: black;
 }
-
-.playBtnGroupPathTranslate {
-  transform: translate(6px, 8px) rotate(180deg);
-  transform-origin: top left;
-}
-
-.lineDotChartPlayBtnTranslate{
-    transform:translate(40px, 20px);
-}
-
-.playBtnGroupPlayTranslate{
-    transform:translate(-4px, -8px);
-}
-
-.playBtnGroupRectTranslate{
-    transform:translate(-7px, -6px);
-}
